--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
-# 核心Web框架
-streamlit>=1.30.0,<2.0.0
-# 数据处理
-pandas>=2.1.0,<3.0.0
-numpy>=1.24.0,<2.0.0
-# 可视化
-plotly>=5.17.0,<6.0.0
-# 金融数据获取
-yfinance>=0.2.31,<0.3.0
-# 时区处理
-pytz>=2023.3,<2024.0
-# 可选：提升yfinance稳定性的依赖（部分环境需要）
-requests>=2.31.0,<3.0.0
-lxml>=4.9.0,<5.0.0
+streamlit>=1.32.0
+pandas>=2.1.0
+numpy>=1.24.0
 plotly>=5.17.0
+yfinance>=0.2.31
+pytz>=2023.3
