--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-streamlit>=1.35.0
-pandas>=2.1.0
-numpy>=1.24.0
-plotly>=5.17.0
-akshare>=1.10.0
-tushare>=1.2.89
-scikit-learn>=1.2.0
-pytz>=2023.3
-requests>=2.31.0
-urllib3>=2.0.0
+streamlit
+akshare
+pandas
+numpy
+scikit-learn
+plotly
